# bdk_wallet

./: README.md  clippy.toml  justfile
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_request.md
.github/workflows/: code_coverage.yml  cont_integration.yml
ci/: pin-msrv.sh
examples/example_wallet_electrum/: Cargo.toml
examples/example_wallet_electrum/src/: main.rs
examples/example_wallet_esplora_async/: Cargo.toml
examples/example_wallet_esplora_async/src/: main.rs
examples/example_wallet_esplora_blocking/: Cargo.toml
examples/example_wallet_esplora_blocking/src/: main.rs
examples/example_wallet_rpc/: Cargo.toml  README.md  justfile
examples/example_wallet_rpc/src/: main.rs
src/wallet/: export.rs
wallet/: CHANGELOG.md  Cargo.toml  README.md
wallet/examples/: compiler.rs  mnemonic_to_descriptors.rs  policy.rs
wallet/src/: lib.rs  persist_test_utils.rs  test_utils.rs  types.rs
wallet/src/descriptor/: checksum.rs  dsl.rs  error.rs  mod.rs  policy.rs  template.rs
wallet/src/keys/: mod.rs
wallet/src/psbt/: mod.rs
wallet/src/wallet/: changeset.rs  coin_selection.rs  error.rs  mod.rs  params.rs  persisted.rs  signer.rs  tx_builder.rs  utils.rs
wallet/tests/: add_foreign_utxo.rs  build_fee_bump.rs  common.rs  persisted_wallet.rs  psbt.rs  wallet.rs
